Apply overflow background fix for Haze in Islands mode

--- a/natsumi/modules/injected/tabs-fixes.css
+++ b/natsumi/modules/injected/tabs-fixes.css
@@ -26,7 +26,7 @@ SOFTWARE.
 
 /* ==== Firefox Nova tabs patches ==== */
 
-@media -moz-pref("browser.nova.enabled") and (not -moz-pref("natsumi.theme.islands")) {
+@media -moz-pref("browser.nova.enabled") and ((not -moz-pref("natsumi.theme.islands")) or -moz-pref("natsumi.theme.islands-haze")) {
   #tabbrowser-arrowscrollbox, #pinned-tabs-container {
     &::part(overflow-start-indicator), &::part(overflow-end-indicator) {
       --toolbox-background-color: light-dark(rgba(0, 0, 0, 0.05), rgba(255, 255, 255, 0.05)) !important;
